--- a/icmake/doc/icmake.1
+++ b/icmake/doc/icmake.1
@@ -48,7 +48,7 @@ separated from each other by colons (\fI:\fP)\&.
 \fI#ifdef\fP, \fI#ifndef\fP, \fI#else\fP and \fI#endif\fP directives can be
 nested\&. 
 .IP o 
-The `backtick\&' operator is defined, executing a program in a shell
+The `backtick\(cq\& operator is defined, executing a program in a shell
 and collecting its standard output in a list (see below)\&.
 .IP o 
 The index operator (\fI[]\fP) is defined as an alternative to the
@@ -65,8 +65,8 @@ The function \fIint strstr(string haystack, string needle)\fP is
 renamed to \fIint strfind(string haystack, string needle)\fP\&. 
 .IP 
 \fBNOTE: this modification in version 7\&.00 could very well
-affect your earlier (6\&.xx) icmake scripts\&. Changing `strstr\&'
-into `strfind\&' should bring your older scripts up-to-date again\&.\fP
+affect your earlier (6\&.xx) icmake scripts\&. Changing `strstr\(cq\&
+into `strfind\(cq\& should bring your older scripts up-to-date again\&.\fP
 
 .PP 
 .SH "OPTIONS"
@@ -76,12 +76,12 @@ into `strfind\&' should bring your older scripts up-to-date again\&.\fP
 .PP 
 \fIsource\fP: \fBicmake\fP script source file (default extension: \fI\&.im\fP)\&.
 .PP 
-\fIdest\fP:   binary \fBicmake\fP script file (default:  \fI`source\&'\&.bim\fP)\&.
+\fIdest\fP:   binary \fBicmake\fP script file (default:  \fI`source\(cq\&\&.bim\fP)\&.
 .PP 
 \fI--\fP:  \fBicmake\fP/\fBicmake\fP-script arguments separator
 .PP 
 \fIargs\fP:  arguments following \fI--\fP are entered into the \fBicmake\fP scipt 
-\fImain()\fP function\&'s \fIargv\fP-list (see below at section
+\fImain()\fP function\(cq\&s \fIargv\fP-list (see below at section
 \fBUSER DEFINED FUNCTIONS\fP)\&.
 .PP 
 .IP o 
@@ -140,7 +140,7 @@ Shell startup: The first line of the \fBicmake\fP-script may start with
 program\&. By making the script executable, it can be called without
 explicitly calling \fBicmake\fP\&.  
 .IP 
-E\&.g\&., if the first line of an (executable) icmakefile \&'icm\&'
+E\&.g\&., if the first line of an (executable) icmakefile \(cq\&icm\(cq\&
 (without extension) contains
 .nf 
 
@@ -169,7 +169,7 @@ In this case the binary makefile is not kept, but a temporary file
 \fI/tmp/icm\&.PID\fP is used and removed on exit\&. The PID extension being
 the process-id of the \fBicmake\fP program executing \fIicm\fP\&.
 .IP o 
-\fI#include "filename"\fP
+\fI#include \(dq\&filename\(dq\&\fP
 .br 
 The file \fIfilename\fP is included at the location of the directive
 .IP o 
@@ -183,7 +183,7 @@ the \fIIM\fP environment variable\&.
 .br 
 The text \fIidentifier\fP will be replaced by \fIdefinition\fP\&. The
 definition may contain references to already defined identifiers,
-using the \fI${identifier}\fP format\&. If the \fI${identifier}\fP hasn\&'t
+using the \fI${identifier}\fP format\&. If the \fI${identifier}\fP hasn\(cq\&t
 been defined (yet), the text \fI${identifier}\fP is literally kept\&. At
 each \fI#define\fP at most 100 text-replacements are performed,
 preventing infinite recursion\&.
@@ -209,6 +209,12 @@ acceptance decision about  the following code\&.
 .br 
 Terminates the preprocessor block starting at the matching 
 \fI#ifdef\fP, \fI#ifndef\fP or \fI#else\fP directive\&.
+.IP o 
+\fI#undef identifier\fP 
+.br 
+Remove \fIidentifier\fP from the set of defined symbols\&. This will not
+affect the specification of any previously defined symbols in which
+\fIidentifier\fP was used\&.
 
 .PP 
 .SH "DATA TYPES"
@@ -220,7 +226,7 @@ The following data types are available:
 .br 
 Integral values, ranging from \fI-0x8000\fP until \fI0x7fff\fP\&. \fIint\fP
 constants may be specified as decimal numbers, hexadecimal numbers or
-as \fIASCII\fP character constants (e\&.g\&., \fI\&'x\&'\fP)\&.
+as \fIASCII\fP character constants (e\&.g\&., \fI\(cq\&x\(cq\&\fP)\&.
 .IP o 
 \fIstring\fP
 .br 
@@ -350,7 +356,7 @@ ll
 c.
 symbol~1 when defined on the platform, otherwise 0
 MSDOS~MS-DOS platform (with MSC 7\&.00 compiler)
-unix~Unix, usually with GNU\&'s gcc compiler
+unix~Unix, usually with GNU\(cq\&s gcc compiler
 linux~x86 running Linux (usually with gcc)
 M_SYSV, M_UNIX~x86 running SCO/Unix (usually with) Microsoft C
 _POSIX~_SOURCE   Unix with Posix complient compiler
@@ -371,8 +377,8 @@ operators are available:
 concatetated without using the \fI+\fP operator, e\&.g\&.,
 .nf 
 
-    "hello "   "world"
-    "hello " + "world"
+    \(dq\&hello \(dq\&   \(dq\&world\(dq\&
+    \(dq\&hello \(dq\& + \(dq\&world\(dq\&
         
 .fi 
 .IP o 
@@ -388,15 +394,15 @@ succeeds, otherwise 0\&. Comparison is case sensitively, and follows the
 empty, otherwise 0 is returned\&.
 .IP o 
 \fIa younger b, a newer b\fP: returns 1 if file \fIa\fP is more recent than
-file \fIb\fP\&. E\&.g\&., \fI"source\&.cc" newer "source\&.o"\fP\&. If \fIb\fP doesn\&'t exist, 1
-is returned; if \fIa\fP doesn\&'t exist 0 is returned; if neither \fIa\fP nor \fIb\fP
+file \fIb\fP\&. E\&.g\&., \fI\(dq\&source\&.cc\(dq\& newer \(dq\&source\&.o\(dq\&\fP\&. If \fIb\fP doesn\(cq\&t exist, 1
+is returned; if \fIa\fP doesn\(cq\&t exist 0 is returned; if neither \fIa\fP nor \fIb\fP
 exists, 0 is returned; if they are of the same age, 0 is returned\&. Explicit
 tests for the existence of a file can be performed using the \fIexists()\fP
 predefined function (see below, section \fBPREDEFINED FUNCTIONS\fP)\&.
 .IP o 
 \fIa older b\fP: turns 1 if file \fIa\fP is older than file \fIb\fP\&. E\&.g\&.,
-\fI"libprog\&.a" older "source\&.o"\fP\&. If \fIa\fP doesn\&'t exist, 1 is returned; if
-\fIb\fP doesn\&'t exist 0 is returned; if neither \fIa\fP nor \fIb\fP exists, 0 is
+\fI\(dq\&libprog\&.a\(dq\& older \(dq\&source\&.o\(dq\&\fP\&. If \fIa\fP doesn\(cq\&t exist, 1 is returned; if
+\fIb\fP doesn\(cq\&t exist 0 is returned; if neither \fIa\fP nor \fIb\fP exists, 0 is
 returned; if they are of the same age, 0 is returned\&.
 .IP o 
 \fI[]\fP: the index operator is defined as an alternative to the built-in
@@ -411,7 +417,7 @@ as well) as so-called \fIrvalue\fP\&. Therefore, constructions like:
 will be accepted, but the following construction will not be accepted:
 .nf 
 
-    str2[3] = str; // won\&'t compile
+    str2[3] = str; // won\(cq\&t compile
         
 .fi 
 
@@ -453,22 +459,22 @@ as well) as so-called \fIrvalue\fP\&. Therefore, constructions like:
 will be accepted, but the following construction will not be accepted:
 .nf 
 
-    lst[3] = str; // won\&'t compile
+    lst[3] = str; // won\(cq\&t compile
         
 .fi 
 
 .PP 
 Typecasts may be performed using the standard \fBC\fP cast-operator to cast:
 .IP o 
-Strings to ints and vice versa (\fI(int)"123", (string)55\fP)
+Strings to ints and vice versa (\fI(int)\(dq\&123\(dq\&, (string)55\fP)
 .IP o 
-Strings may be cast to lists (\fIlist lst = (list)"hello"\fP)
+Strings may be cast to lists (\fIlist lst = (list)\(dq\&hello\(dq\&\fP)
 
 .PP 
 .SH "FLOW CONTROL"
 
 .PP 
-\fBIcmake\fP offers the following subset of \fBC\fP\&'s statement types\&. They can be
+\fBIcmake\fP offers the following subset of \fBC\fP\(cq\&s statement types\&. They can be
 used as in the \fBC\fP programming language\&.
 .IP o 
 \fIexpression ;\fP
@@ -481,7 +487,7 @@ Different from \fBC\fP \fBicmake\fP does not support variable definitions
 inside a compound statement\&. All variables used locally
 by a function must be defined as either function parameters or
 as variables that are defined immediately at the beginning of a
-function\&'s body\&.
+function\(cq\&s body\&.
 .IP o 
 \fIif (condition) statement\fP
 .IP o 
@@ -492,7 +498,7 @@ function\&'s body\&.
 The variable(s) used in the initialization section must already have
 been defined\&. The \fIinit\fP, \fIcondition\fP and \fIincrement\fP sections
 may be left empty\&. The empty condition section is interpreted as
-`always \fItrue\fP\&'\&.
+`always \fItrue\fP\(cq\&\&.
 .IP o 
 \fIwhile (condition) statement\fP
 .br 
@@ -503,13 +509,13 @@ functions\&.
 .IP o 
 \fIbreak\fP
 .br 
-To leave \fIfor\fP and \fIwhile\fP statements, overruling the statement\&'s
-condition\&. \fBC\fP\&'s \fIcontinue\fP is not available\&.
+To leave \fIfor\fP and \fIwhile\fP statements, overruling the statement\(cq\&s
+condition\&. \fBC\fP\(cq\&s \fIcontinue\fP is not available\&.
 .IP o 
 \fIexit(expression)\fP
 .br 
 To terminate the \fBicmake\fP-script\&. The \fIexpression\fP must evaluate to an
-\fIint\fP value, which becomes the script\&'s exit value\&.
+\fIint\fP value, which becomes the script\(cq\&s exit value\&.
 
 .PP 
 .SH "PREDEFINED FUNCTIONS"
@@ -524,13 +530,13 @@ Helper functions of \fIexec()\fP (see also below at \fIexec()\fP):
 .IP o 
 \fIvoid arghead(string h)\fP
 .br 
-Defines the `argument head\&', to be used with \fIexec()\fP\&. By default,
-the `argument head\&' is an empty string\&.
+Defines the `argument head\(cq\&, to be used with \fIexec()\fP\&. By default,
+the `argument head\(cq\& is an empty string\&.
 .IP o 
 \fIvoid argtail (string t)\fP
 .br 
-Defines the `argument tail\&', to be used with \fIexec()\fP\&. By default,
-the `argument tail\&' is an empty string\&.
+Defines the `argument tail\(cq\&, to be used with \fIexec()\fP\&. By default,
+the `argument tail\(cq\& is an empty string\&.
 
 .PP 
 String-to-ascii converters:
@@ -538,12 +544,12 @@ String-to-ascii converters:
 \fIint ascii(string s)\fP
 .br 
 Returns the first character of \fIs\fP as an int; e\&.g\&.,
-\fIascii("A")\fP returns 65;
+\fIascii(\(dq\&A\(dq\&)\fP returns 65;
 .IP o 
 \fIstring ascii(int i)\fP
 .br 
 Returns \fIi\fP as a string, e\&.g\&., \fIascii(65)\fP returns the string
-\fI"A"\fP;
+\fI\(dq\&A\(dq\&\fP;
 
 .PP 
 System calls:
@@ -555,12 +561,12 @@ function\&. The standard output gererated by the command that is stored
 in the string argument is returned as a list\&. An empty list indicates
 that the command could not be executed\&. A command that could be
 executed but did not produce any output returns a list containing one
-empty element\&. The command\&'s standard error stream output is not
+empty element\&. The command\(cq\&s standard error stream output is not
 automatically collected\&. Standard shell redirection could be used to
-collect the standard error stream\&'s output as well\&. Example:
+collect the standard error stream\(cq\&s output as well\&. Example:
 .nf 
 
-        string s = "ls";
+        string s = \(dq\&ls\(dq\&;
         printf(`s`);        // prints the elements in the current
                             // directory
             
@@ -572,18 +578,18 @@ Filename modifiers:
 \fIstring change_base(string file, string newbase)\fP
 .br 
 Changes the basename of \fIfile\fP, returns the changed name\&. E\&.g, 
-\fIchange_base("/path/demo\&.im", "out")\fP returns \fI"/path/out\&.im"\fP;
+\fIchange_base(\(dq\&/path/demo\&.im\(dq\&, \(dq\&out\(dq\&)\fP returns \fI\(dq\&/path/out\&.im\(dq\&\fP;
 .IP o 
 \fIstring change_ext(string file, string newext)\fP
 .br 
 Changes the extension of \fIfile\fP, returns the changed name\&. E\&.g, 
-\fIchange_ext("source\&.cc", "o")\fP returns \fI"source\&.o"\fP;
+\fIchange_ext(\(dq\&source\&.cc\(dq\&, \(dq\&o\(dq\&)\fP returns \fI\(dq\&source\&.o\(dq\&\fP;
 .IP o 
 \fIstring change_path(string file, string newpath)\fP
 .br 
 Changes the path specification of \fIfile\fP, returns the changed name\&.
-E\&.g, \fIchange_path("tmp/binary", "/usr/bin")\fP returns 
-\fI"/usr/bin/binary"\fP\&. Note that the \fI/\fP-separator is inserted if
+E\&.g, \fIchange_path(\(dq\&tmp/binary\(dq\&, \(dq\&/usr/bin\(dq\&)\fP returns 
+\fI\(dq\&/usr/bin/binary\(dq\&\fP\&. Note that the \fI/\fP-separator is inserted if
 required\&. 
 
 .PP 
@@ -591,11 +597,11 @@ System calls:
 .IP o 
 \fIstring chdir(string newdir)\fP
 .br 
-Changes the script\&'s working directory, returns the previous dir as an
+Changes the script\(cq\&s working directory, returns the previous dir as an
 absolute path\&.
 .br 
-Use \fIchdir("\&.")\fP to get current working directory, 
-\fIchdir("")\fP may be used to obtain the startup working directory (this
+Use \fIchdir(\(dq\&\&.\(dq\&)\fP to get current working directory, 
+\fIchdir(\(dq\&\(dq\&)\fP may be used to obtain the startup working directory (this
 functionality was broken in releases before than 7\&.00, but is now
 operational)\&. The function terminates the \fBicmake\fP-script if the
 specified \fInewdir\fP does not exist\&.
@@ -603,8 +609,8 @@ specified \fInewdir\fP does not exist\&.
 \fIstring chdir(int checking, string newdir)\fP
 .br 
 Same functionality as the previous function, but by specifying
-\fIchecking\fP as \fIP_NOCHECK\fP the function won\&'t terminate the
-script\&. Rather, it will return the script\&'s current working
+\fIchecking\fP as \fIP_NOCHECK\fP the function won\(cq\&t terminate the
+script\&. Rather, it will return the script\(cq\&s current working
 directory\&. 
 
 .PP 
@@ -612,13 +618,13 @@ Helper functions of \fIexec()\fP (see also below at \fIexec()\fP):
 .IP o 
 \fIcmdhead(string h)\fP
 .br 
-Defines a `command head\&', to be used with \fIexec()\fP\&. By default,
-the `command head\&' is an empty string\&.
+Defines a `command head\(cq\&, to be used with \fIexec()\fP\&. By default,
+the `command head\(cq\& is an empty string\&.
 .IP o 
 \fIcmdtail(string t)\fP
 .br 
-Defines a `command tail\&', to be used with \fIexec()\fP\&. By default,
-the `command tail\&' is an empty string\&.
+Defines a `command tail\(cq\&, to be used with \fIexec()\fP\&. By default,
+the `command tail\(cq\& is an empty string\&.
 
 .PP 
 \fBIcmake\fP execution modifier:
@@ -649,22 +655,22 @@ System calls:
 \fIexec(string cmd, \&.\&.\&.)\fP
 .br 
 Executes command with arguments\&. Each argument will be prefixed by
-\fIarghead()\fP\&'s argument and postfixed by \fIargtail()\fP\&'s
-argument\&. Note that no blanks are inserted between \fIarghead()\fP\&'s
-contents, the argument proper, and \fIargtail()\fP\&'s argument\&. All thus
+\fIarghead()\fP\(cq\&s argument and postfixed by \fIargtail()\fP\(cq\&s
+argument\&. Note that no blanks are inserted between \fIarghead()\fP\(cq\&s
+contents, the argument proper, and \fIargtail()\fP\(cq\&s argument\&. All thus
 modified arguments are concatenated, this time separated by single
-blanks, and then \fIcmdhead()\fP\&'s contents are inserted between the
+blanks, and then \fIcmdhead()\fP\(cq\&s contents are inserted between the
 command and the first argument (on either side delimited by single
-blanks) and \fIcmdtail()\fP\&'s contents are appended to the arguments
+blanks) and \fIcmdtail()\fP\(cq\&s contents are appended to the arguments
 (again, separated by a single blank)\&. \fIPATH\fP is searched to locate
 \fIcmd\fP\&. 0 is returned\&.
 .IP o 
 \fIexec(int checkcmd, string cmd, \&.\&.\&.)\fP
 .br 
 Same functionality as the previous function, but by specifying
-\fIchecking\fP as \fIP_NOCHECK\fP the function won\&'t terminate the
-script\&. Rather, it will return the called command\&'s exit status, or
-\fI0x7f00\fP if the command wasn\&'t found\&.
+\fIchecking\fP as \fIP_NOCHECK\fP the function won\(cq\&t terminate the
+script\&. Rather, it will return the called command\(cq\&s exit status, or
+\fI0x7f00\fP if the command wasn\(cq\&t found\&.
 .IP o 
 \fIexecute(string cmd, string cmdhd,
 string arghd, \&.\&.\&., string argtl, string cmdtl)\fP
@@ -680,9 +686,9 @@ with \fIcmdtl\fP\&. 0 is returned
 string arghd, \&.\&.\&., string argtl, string cmdtl)\fP
 .br 
 Same functionality as the previous function, but by specifying
-\fIchecking\fP as \fIP_NOCHECK\fP the function won\&'t terminate the
-script\&. Rather, it will return the called command\&'s exit status, or
-\fI0x7f00\fP if the command wasn\&'t found\&.
+\fIchecking\fP as \fIP_NOCHECK\fP the function won\(cq\&t terminate the
+script\&. Rather, it will return the called command\(cq\&s exit status, or
+\fI0x7f00\fP if the command wasn\(cq\&t found\&.
 )
 .PP 
 System interface:
@@ -706,7 +712,7 @@ It returns a list \fIretlist\fP containing two elements:
 .br 
 
 .IP 
-An empty return list signifies \fIEOF\fP\&. Since an empty list\&'s `first\&'
+An empty return list signifies \fIEOF\fP\&. Since an empty list\(cq\&s `first\(cq\&
 eement is an empty string, which is converted to the value 0, a file
 may be read and processed as follows:
 .nf 
@@ -714,7 +720,7 @@ may be read and processed as follows:
         list line;
         while (1)
         {
-            line = fgets("filename", (int)line[1]);
+            line = fgets(\(dq\&filename\(dq\&, (int)line[1]);
             if (!line)
                 break;
             process(line[0]);
@@ -751,12 +757,12 @@ Returns the value of environment variable \fIenvvar\fP in a list
 containing two elements:
 .br 
 the first element indicates whether the environment variable was
-defined (value \fI"1"\fP) or not (value \fI"0"\fP);
+defined (value \fI\(dq\&1\(dq\&\fP) or not (value \fI\(dq\&0\(dq\&\fP);
 .br 
 the second element indicates the value of the environment variable\&.
 .IP 
 Enivironment variables are of the form \fIvariable=value\fP, and if
-defined the list\&'s second element contains \fIvalue\fP\&. If the value is
+defined the list\(cq\&s second element contains \fIvalue\fP\&. If the value is
 empty, the variable is defined, but has no text associated with it\&.
 
 .PP 
@@ -774,7 +780,7 @@ Input interface:
 .IP o 
 \fIstring getch()\fP
 .br 
-Returns the next pressed key as a string (no `Enter\&' required for
+Returns the next pressed key as a string (no `Enter\(cq\& required for
 ms-dos and unix (incl\&. linux) systems)\&.
 
 .PP 
@@ -802,7 +808,7 @@ Input interface:
 \fIstring gets()\fP
 .br 
 Returns the next line read from the keyboard as a \fIstring\fP\&. The line
-entered on the keyboard must be terminated by an `Enter\&' key, which is
+entered on the keyboard must be terminated by an `Enter\(cq\& key, which is
 not stored in the returned string\&.
 
 .PP 
@@ -811,7 +817,7 @@ Functions creating lists of files:
 \fIlist makelist(string mask)\fP
 .br 
 Returns a list of all files matching \fImask\fP\&. E\&.g\&.,
-\fImakelist("*\&.c")\fP returns a list containing all files ending in
+\fImakelist(\(dq\&*\&.c\(dq\&)\fP returns a list containing all files ending in
 \fI\&.c\fP\&. 
 .IP o 
 \fIlist makelist(type, string mask)\fP
@@ -885,7 +891,7 @@ System interface:
 \fIint putenv(string envvar)\fP
 .br 
 Adds \fIenvvar\fP to the current (\fBicmake\fP) environment
-Use the format: "VAR=value"\&. Returns 0\&.
+Use the format: \(dq\&VAR=value\(dq\&\&. Returns 0\&.
 
 .PP 
 List information:
@@ -916,8 +922,8 @@ See the \fBstat\fP(2) manual page for the meanings of these constants\&.
 \fIlist stat(checking, string entry)\fP
 .br 
 Same as the previous function, but by specifying \fIchecking\fP as
-\fIP_NOCHECK\fP the function won\&'t terminate the script\&. Rather, it will
-rturn \fBstat\fP(2)\&'s return value\&.
+\fIP_NOCHECK\fP the function won\(cq\&t terminate the script\&. Rather, it will
+rturn \fBstat\fP(2)\(cq\&s return value\&.
 
 .PP 
 String support:
@@ -941,17 +947,17 @@ Returns a lower-case duplicate of \fIs\fP\&.
 .br 
 Returns a list containing all substrings of \fIstr\fP separated by one
 or more (consecutive) characters in \fIseparators\fP\&. E\&.g\&.,
-\fIstrtok("hello icmake\&'s+world", " +")\fP returns the list containing
-the three strings \fI"hello"\fP, \fI"icmake\&'s"\fP, and \fI"world"\fP\&.
+\fIstrtok(\(dq\&hello icmake\(cq\&s+world\(dq\&, \(dq\& +\(dq\&)\fP returns the list containing
+the three strings \fI\(dq\&hello\(dq\&\fP, \fI\(dq\&icmake\(cq\&s\(dq\&\fP, and \fI\(dq\&world\(dq\&\fP\&.
 .IP o 
 \fIstring strupr(string s)\fP
 .br 
 Returns an upper-case duplicate of \fIs\fP\&.
 .IP o 
-\fIint substr(string text, int offset, int count)\fP
+\fIstring substr(string text, int offset, int count)\fP
 .br 
 Returns a substring of \fItext\fP, starting at \fIoffset\fP, consisting of
-\fIcount\fP characters\&. If \fIoffset\fP exceeds (or equals) the string\&'s
+\fIcount\fP characters\&. If \fIoffset\fP exceeds (or equals) the string\(cq\&s
 size or if \fIcount <= 0\fP, then an empty string is returned\&. If
 \fIoffset\fP is less than 0 then 0 is used\&.
 
@@ -961,15 +967,15 @@ System calls:
 \fIint system(string command)\fP
 .br 
 Executes \fIcommand\fP\&. The return value indicates the executed
-command\&'s exit value\&. The string \fIcommand\fP may contain redirection
+command\(cq\&s exit value\&. The string \fIcommand\fP may contain redirection
 and/or piping characters\&.
 .IP o 
 \fIint system(int checking, string command)\fP
 .br 
 Same functionality as the previous function, but by specifying
-\fIchecking\fP as \fIP_NOCHECK\fP the function won\&'t terminate the
-script\&. Rather, it will return the called command\&'s exit status, or
-\fI0x7f00\fP if the command wasn\&'t found\&.
+\fIchecking\fP as \fIP_NOCHECK\fP the function won\(cq\&t terminate the
+script\&. Rather, it will return the called command\(cq\&s exit status, or
+\fI0x7f00\fP if the command wasn\(cq\&t found\&.
 )
 .PP 
 .SH "USER DEFINED FUNCTIONS"
@@ -978,14 +984,14 @@ script\&. Rather, it will return the called command\&'s exit status, or
 \fBIcmake\fP scripts may define functions, and a function \fImain()\fP \fImust\fP be
 defined\&. Functions must have the following elements:
 .IP o 
-The function\&'s return type\&. One of the available types must be
+The function\(cq\&s return type\&. One of the available types must be
 used explicitly, e\&.g\&., \fIvoid\fP\&. There is no default type\&. 
 .IP o 
-The function\&'s name, e\&.g\&., \fIcompile\fP\&.
+The function\(cq\&s name, e\&.g\&., \fIcompile\fP\&.
 .IP o 
 A parameter list, defining zero or more comma-separated
 parameters\&. The parameters themselves consist of a type name followed by the
-parameter\&'s identifier\&. E\&.g\&., \fI(string outfile, string source)\fP\&.
+parameter\(cq\&s identifier\&. E\&.g\&., \fI(string outfile, string source)\fP\&.
 .IP o 
 A \fIbody\fP surrounded by a pair of curly braces (\fI{\fP and \fI}\fP)\&.
 .IP 
@@ -994,7 +1000,7 @@ definitions\&. Variable definitions start with a type name, followed by one or
 more comma separated (optionally initialized) variable identifiers\&.  If a
 variable is not explicitly initialized it is initialized by default\&. An
 \fIint\fP variable is initialized to 0, a \fIstring\fP is initialized to empty
-text (\fI""\fP) and a \fIlist\fP is initialized to a list of zero elements\&.
+text (\fI\(dq\&\(dq\&\fP) and a \fIlist\fP is initialized to a list of zero elements\&.
 .IP 
 Following variable definitions, bodies may contain zero or more statements
 (see below at section \fBFLOW CONTROL\fP for the various flow-control
@@ -1019,9 +1025,9 @@ In \fImain()\fP,
 \fIargc\fP represents the number of elements in \fIargv\fP;
 .IP o 
 \fIargv\fP contains the arguments, with element 0 the compiled \fBicmake\fP script
-(the `\fI\&.bim\fP\&' file);
+(the `\fI\&.bim\fP\(cq\& file);
 .IP o 
-\fIenvp\fP containts the `environment\&' variables\&. The function \fIsizeof()\fP
+\fIenvp\fP containts the `environment\(cq\& variables\&. The function \fIsizeof()\fP
 (see below) may be used to determine its elements\&. Elements in \fIenvp\fP have
 the form \fIvariable=value\fP\&. Alternatively, the function \fIgetenv()\fP (see
 below) can be used to retrieve a specific environment variable immediately\&.
@@ -1036,12 +1042,12 @@ Example:
         if (argc == 1)
             usage(element(0, argv));
 
-        if (toCompile = altered("*\&.cc"))
+        if (toCompile = altered(\(dq\&*\&.cc\(dq\&))
         {
             for (idx = sizeof(toCompile); idx--; )
                 compile(element(idx, toCompile));
 
-            if (getenv("dryrun")[0] == "0")
+            if (getenv(\(dq\&dryrun\(dq\&)[0] == \(dq\&0\(dq\&)
                 linking(element(2, argv));
         }
         exit (0);
@@ -1075,7 +1081,7 @@ particular the \fIexamples/icmbuild\fP subdirectory containing a general script
 for \fBC++\fP and \fBC\fP program maintenance\&.
 .PP 
 .SH "SEE ALSO"
-\fBicmbuild\fP(1), \fBicmstart\fP(1), \fBmake\fP(1)
+\fBicmbuild\fP(1), \fBicmstart\fP(1), \fBicmstart\&.rc\fP(7), \fBmake\fP(1)
 .PP 
 .SH "BUGS"
 None reported
